unpackaged/main/default/objects/Account/fields/Feature_C_test__c.field-meta.xml
<CustomField>
    <fullName>Feature_C_test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>THIS IS A LOCK TEST</description>
    <label>Feature_C_test</label>
    <type>Checkbox</type>
</CustomField>