unpackaged/main/default/objects/Account/fields/Handover_notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_notes__c</fullName>
    <label>Handover_notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>