unpackaged/main/default/objects/Account/fields/MONGODB_TEST_FIELD__c.field-meta.xml
<CustomField>
    <fullName>MONGODB_TEST_FIELD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MONGODB_TEST_FIELD</label>
    <type>Checkbox</type>
</CustomField>