unpackaged/main/default/objects/Account/fields/Service_demo_field__c.field-meta.xml
<CustomField>
    <fullName>Service_demo_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service_demo_field</label>
    <type>Checkbox</type>
</CustomField>