unpackaged/main/default/objects/Account/fields/TEST_ABC__c.field-meta.xml
<CustomField>
    <fullName>TEST_ABC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST_ABC</label>
    <type>Checkbox</type>
</CustomField>