unpackaged/main/default/objects/Account/fields/TEST_LOCK_BRANCH__c.field-meta.xml
<CustomField>
    <fullName>TEST_LOCK_BRANCH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEST_LOCK_BRANCH</label>
    <type>Checkbox</type>
</CustomField>