unpackaged/main/default/objects/Account/fields/Test_outside_process__c.field-meta.xml
<CustomField>
    <fullName>Test_outside_process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test_outside_process</label>
    <type>Checkbox</type>
</CustomField>